| Bug #30200 | mysqlbinlog.test: connection_id() not restored under ps-protocol | ||
|---|---|---|---|
| Submitted: | 2 Aug 2007 10:33 | Modified: | 3 Aug 2007 4:18 |
| Reporter: | Tim Smith | ||
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S2 (Serious) |
| Version: | OS: | Any | |
| Assigned to: | Ramil Kalimullin | Target Version: | |
| Tags: | pbfail | ||
[2 Aug 2007 10:33]
Tim Smith
[2 Aug 2007 11:03]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/32000 ChangeSet@1.2499, 2007-08-02 14:03:04+05:00, ramil@mysql.com +2 -0 Fix for bug #30200: mysqlbinlog.test: connection_id() not restored under ps-protocol Problem: thd->thread_specific_used flag is not set executing a statement containig connection_id() function using PS protocol, that leads to improper binlog event creation. Fix: set the flag in the Item_func_connection_id::fix_fields().
[2 Aug 2007 11:53]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/32003 ChangeSet@1.2499, 2007-08-02 14:51:03+05:00, ramil@mysql.com +3 -0 Fix for bug #30200: mysqlbinlog.test: connection_id() not restored under ps-protocol Problem: thd->thread_specific_used flag is not set executing a statement containig connection_id() function using PS protocol, that leads to improper binlog event creation. Fix: set the flag in the Item_func_connection_id::fix_fields().
[2 Aug 2007 21:12]
Bugs System
Pushed into 5.1.21-beta
[2 Aug 2007 21:15]
Bugs System
Pushed into 5.0.48
[3 Aug 2007 4:18]
Paul DuBois
Noted in 5.0.48, 5.1.21 changelogs. Prepared statements containing CONNECTION_ID() could be written improperly to the binary log.
