sql/item_create.cc
@@ -72,7 +72,6 @@ Item *create_func_connection_id(void)
 {
   THD *thd= current_thd;
   thd->lex->safe_to_cache_query= 0;
-  thd->thread_specific_used= TRUE;
   return new Item_func_connection_id();
 }
 
